--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "next": "14.0.4",
+    "next-google-fonts": "^2.2.0",
     "react": "^18",
     "react-dom": "^18",
     "sass": "^1.69.7"
